<resources>
    <string name="app_name">InternetShop</string>
    <string name="price">%s$</string>
    <string name="brand">H&amp;M</string>
    <string name="short_description">Short black dress</string>
    <string name="description">Short dress in soft cotton jersey with decorative buttons down the front and a wide, frill-trimmed square neckline with concealed elastication. Elasticated seam under the bust and short puff sleeves with a small frill trim. Short dress in soft cotton jersey with decorative buttons down the front and a wide, frill-trimmed square neckline with concealed elastication. Elasticated seam under the bust and short puff sleeves with a small frill trim.</string>
    <string name="number_of_reviews">(10)</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_to_cart">Add to cart</string>
    <string name="added_to_cart">Added to cart</string>

    <string name="login">Login</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rating_and_review">Rating&amp;Reviews</string>
    <string name="watch_review">Watch review</string>
    <string name="favorite">Favorite</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>

    <string name="label_categories">Categories</string>
    <string name="label_products">Products</string>
    <string name="label_reviews">Reviews</string>

    <string name="label_server_not_response">Server not response</string>

    <string name="error_fill_all_fields">Fill in all the fields!</string>
    <string name="label_google_clicked">Google clicked</string>
    <string name="label_shop">Shop</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_cart">Cart</string>
    <string name="label_bag">Bag</string>
    <string name="review_label">Review</string>
    <string name="label_auth">Authentication</string>
    <string name="label_product">Product #{id}</string>
    <string name="text_view_category_error_header">Something went wrong</string>
    <string name="text_view_category_error_description">Try again</string>
    <string name="toast_open_sale_notification">Open sale notification</string>
    <string name="toast_product_not_found">Product not found</string>
    <string name="fragment_favorite_text_view_filters">Filters</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="label_color">Color:</string>
    <string name="label_size">Size:</string>
    <string name="total_amount">Total amount:</string>
    <string name="check_out">CHECK OUT</string>
    <string name="label_pdp_size">Size</string>
    <string name="label_pdp_color">Color</string>
    <string name="toast_not_all_fields_are_filled">Not all fields are filled</string>

    <string name="data_has_been_updated">Data has been updated</string>

    <string-array name="sort_value">
        <item>Default</item>
        <item>Name: ascending</item>
        <item>Name: descending</item>
        <item>Price: lowest to high</item>
        <item>Price: highest to low</item>
        <item>Rating: ascending</item>
        <item>Rating: descending</item>
    </string-array>
</resources>