<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.internetshop.domain.data.model.product.Product" />

        <variable
            name="viewModel"
            type="com.example.internetshop.presentation.viewModel.ProductDetailsViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_product_details_xml_constraintlayout3_scene"
        app:motionDebug="SHOW_ALL">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"
            android:scaleType="centerCrop"
            android:src="@{product.imageURL}"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/photomodel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:paddingBottom="100dp"
            app:layout_constraintTop_toBottomOf="@id/mainImage"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:context=".presentation.activity.MainActivity">


            <ToggleButton
                android:id="@+id/favorite"
                android:layout_width="@dimen/favorite_button_size"
                android:layout_height="@dimen/favorite_button_size"
                android:layout_marginTop="@dimen/dimen_default_margin"
                android:layout_marginEnd="@dimen/dimen_default_margin"
                android:background="@drawable/selector_favorite_button"
                android:checked="@{viewModel.favoriteIsChecked}"
                android:elevation="20dp"
                android:onClick="@{()->viewModel.favoriteClicked()}"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_headers_height"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/dimen_default_margin"
                android:fontFamily="@font/metropolis_bold"
                android:text='@{product.price + "$"}'
                android:textSize="@dimen/dimen_headers_text_size"
                android:textStyle="bold"
                android:visibility="@{product.price != null ?View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite"
                tools:text="@string/prise" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_default_margin"
                android:ellipsize="end"
                android:maxWidth="180dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{product.brand}"
                android:textSize="@dimen/product_details_brand_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/price"
                tools:text="@string/brand" />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_short_description_height"
                android:text="@{product.shortDescription}"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_short_description_text_size"
                app:layout_constraintStart_toStartOf="@id/brand"
                app:layout_constraintTop_toBottomOf="@id/brand"
                tools:text="@string/short_description" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_star_rate_size_height"
                android:layout_marginStart="@dimen/dimen_star_rate_margin_start"
                android:layout_marginTop="@dimen/dimen_star_rate_margin_top"
                android:numStars="5"
                android:rating="@{product.rating}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/short_description"
                tools:rating="2.5" />

            <TextView
                android:id="@+id/numberOfReviews"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_number_of_reviews_height"
                android:layout_marginStart="@dimen/dimen_number_of_reviews_margin_start"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@{product.numberOfReviews}"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimen_number_of_reviews_text_size"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toTopOf="@id/rating"
                tools:text="@string/number_of_reviews" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_default_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@{product.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberOfReviews"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/go_to_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/watch_review"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/price" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/red_rectangle_button"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </FrameLayout>
</layout>